--- a/css/style.css
+++ b/css/style.css
@@ -1,89 +1,64 @@
 body {
-	margin-bottom: 400px;
-	padding: 60px;
-	background-color: #fff;
-	color: #333;
-	font-family: Arial, sans-serif;
+    margin-bottom: 300px;
+    background-color: #fff;
+    color: #333;
+    font-family: Arial, sans-serif;
 }
 
-h2 {
-	font-size: 2em;
-	color: #cc0000;
-	border-top: 1px solid #cc0000;
-	border-bottom: 1px solid #cc0000;
-	text-align: center;
-	padding: 10px;
+h3 {
+    border-bottom: 1px solid #cc0000;
+    border-top: 1px solid #cc0000;
+    background-color: #cc0000;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
 }
 
-pre {
-	border: 1px solid #cc0000;
-	height: auto; /* Hauteur ajustable pour le contenu */
-	width: 100%;
-	background: #ffe6e6;
-	margin: 10px 0;
-	padding: 10px;
-	overflow: auto; /* Assurer le défilement pour les longues lignes */
+div {
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #cc0000;
+    background-color: #ffe6e6;
+    width: 200px;
+    margin: auto;
 }
 
-pre p {
-	font-size: 1.2em;
-	padding-left: 20px;
-	color: #cc0000;
-	margin: 0;
+img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
 }
 
-.topnav {
-	background: #b30000;
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	margin-bottom: 20px;
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
 }
 
-.topnav a {
-	color: #fff;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 17px;
+table,
+th,
+td {
+    border: 1px solid #cc0000;
 }
 
-.topnav a:hover {
-	background: #fff;
-	color: #cc0000;
+th {
+    background-color: #cc0000;
+    color: white;
+    padding: 10px;
 }
 
-.texte p {
-	color: #333;
-	font-size: 1.3em;
-	text-align: justify;
-	margin: 0 0 20px;
+td {
+    padding: 10px;
+    text-align: center;
+    background-color: #fff;
 }
 
-ul {
-	margin-left: 20px;
-	padding-left: 0;
-	margin: 0 0 20px;
+a {
+    color: #cc0000;
+    text-decoration: none;
 }
 
-ul li {
-	margin-bottom: 10px;
-	list-style-type: square;
-	color: #cc0000;
-	font-size: 1.2em;
-}
-
-.img_div {
-	width: 200px;
-	margin: 0 auto 20px;
-}
-
-.img_div img {
-	width: 100%;
-}
-
-hr {
-	border: 0;
-	border-top: 1px solid #cc0000;
-	margin: 20px 0;
+a:hover {
+    text-decoration: underline;
 }
